--- a/Gym/wwwroot/css/site.css
+++ b/Gym/wwwroot/css/site.css
@@ -69,3 +69,29 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+#my_camera {
+    width: 320px;
+    height: 240px!important;
+}
+
+.nodisplay{
+    display:none;
+}
+
+.uploadedimage {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.cambutton {
+    padding: 2px 10px;
+    font-size: 10px;
+    border-radius: 7px;
+}
+
+.registrationformback {
+    background-color: tan;
+    color: white;
+}
